--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@floating-ui/react": "^0.26.9",
+    "@fontsource-variable/raleway": "^5.0.18",
     "@fontsource-variable/roboto-mono": "^5.0.18",
+    "@fontsource/poppins": "^5.0.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
